Wed Dec  6 14:42:57 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * server.c (check_password): new func.
        (authenticate_connection): call above new func.

        * login.c (login): use construct_cvspass_filename().
        If CVSroot is not "fully-qualified", then insist the user qualify
        it before going on.
        (get_cvs_password): fleshed out.  Now reads from ~/.cvspass, or
        prompts if no appropriate password found.
        (construct_cvspass_filename): new func.

        * server.c (authenticate_connection): send ACK or NACK to client.

        * client.c (connect_to_pserver): check for ACK vs NACK response
        from server after sending authorization request.

        * login.c (get_cvs_password): new func.

        * client.c (connect_to_pserver): use new func get_cvs_password().
        Prototype it at top of file.  Hmmm.
        
Wed Dec  6 13:29:22 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * server.c: same as below (AUTH_SERVER_SUPPORT).

        * main.c: same as below (AUTH_SERVER_SUPPORT where appropriate).

        * login.c: same same as below.

        * cvs.h: same as below.

        * client.c: use AUTH_CLIENT_SUPPORT, not CVS_LOGIN.

        * options.h.in (AUTH_CLIENT_SUPPORT, AUTH_SERVER_SUPPORT): these
        replace CVS_LOGIN.

Wed Dec  6 00:04:58 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * server.c (authenticate_connection): expanded comment.

Tue Dec  5 23:37:39 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * client.c (connect_to_pserver): read password from prompt for
        now.

        * server.c (authenticate_connection): if the password passes
        muster, then don't abort.

Tue Dec  5 22:46:37 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * subr.c (strip_trailing_newlines): new func.

        * client.c (connect_to_pserver): took out print statements.

        * server.c (authenticate_connection): removed print statments.